# azure-security-posture-reviewer

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: employer-review.md  remediation-guide.md  roadmap.md
reports/: example_findings.json  example_findings.md
sample_data/: azure_resources.json
src/azure_security_posture_reviewer/: __init__.py  reviewer.py
tests/: test_reviewer.py
