[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-security-posture-reviewer"
version = "1.0.0"
description = "Azure cloud security posture reviewer using safe exported resource data."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
